syntax = "proto3";

package ratelimiter;

option go_package = "github.com/nshekhawat/rate-limiter-go/api/proto";

service RateLimiterService {
  // CheckRateLimit checks if a request should be allowed based on rate limiting rules
  rpc CheckRateLimit(CheckRequest) returns (CheckResponse);

  // GetLimitStatus returns the current rate limit status for an identifier
  rpc GetLimitStatus(StatusRequest) returns (StatusResponse);

  // ResetLimit resets the rate limit for an identifier
  rpc ResetLimit(ResetRequest) returns (ResetResponse);
}

message CheckRequest {
  // Unique identifier for the rate limit (e.g., IP address, API key, user ID)
  string identifier = 1;

  // Resource being accessed (e.g., endpoint path, API method)
  string resource = 2;

  // Number of tokens to consume (default: 1)
  int64 tokens = 3;
}

message CheckResponse {
  // Whether the request is allowed
  bool allowed = 1;

  // Maximum number of requests allowed in the window
  int64 limit = 2;

  // Number of requests remaining in the current window
  int64 remaining = 3;

  // Seconds until the rate limit resets (only set if not allowed)
  int64 retry_after_seconds = 4;

  // Unix timestamp when the rate limit will reset
  int64 reset_at_unix = 5;
}

message StatusRequest {
  // Unique identifier for the rate limit
  string identifier = 1;

  // Resource being accessed (optional, for resource-specific limits)
  string resource = 2;
}

message StatusResponse {
  // Maximum number of requests allowed in the window
  int64 limit = 1;

  // Number of requests remaining in the current window
  int64 remaining = 2;

  // Unix timestamp when the rate limit will reset
  int64 reset_at_unix = 3;

  // Current number of tokens available
  double tokens_available = 4;
}

message ResetRequest {
  // Unique identifier for the rate limit to reset
  string identifier = 1;

  // Resource to reset (optional, for resource-specific limits)
  string resource = 2;
}

message ResetResponse {
  // Whether the reset was successful
  bool success = 1;

  // Message describing the result
  string message = 2;
}
